# KIV-RTOS

./: .gitignore  LICENSE  README.md
.github/workflows/: build-rpi-zero.yml
doc/courses/01/: 01_kivrtos.tex
doc/courses/02/: 02_kivrtos.tex
doc/courses/03/: 03_kivrtos.tex
doc/courses/04/: 04_kivrtos.tex
doc/courses/05/: 05_kivrtos.tex
doc/courses/06/: 06_kivrtos.tex
doc/courses/07/: 07_kivrtos.tex  bcm2835_trng_doc.html
doc/courses/07/oled_base_code/: oled_ssd1306.cpp  oled_ssd1306.h
doc/courses/08/: 08_kivrtos.tex
doc/courses/09/: 09_kivrtos.tex
doc/courses/0a/: 0a_kivrtos.tex
doc/courses/_blank/: xx_kivrtos.tex
doc/courses/kiv-dpp-01-doc/: kiv-dpp-01-doc.tex
misc/bootloader/: Makefile  kernel.img  link.ld  loader.c  loader.elf  loader.list  peripherals.c  peripherals.h  vectors.s
misc/cmake/: toolchain-arm-none-eabi-rpi0.cmake
misc/host_loader/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt  build.sh
sources/kernel/: link.ld
sources/kernel/include/: interrupt_controller.h
sources/kernel/include/board/rpi0/hal/: peripherals.h
sources/kernel/include/drivers/: bcm_aux.h  gpio.h  i2c.h  timer.h  uart.h
sources/kernel/include/drivers/bridges/: display_protocol.h
sources/kernel/include/fs/: filesystem.h
sources/kernel/include/fs/drivers/: condvar_fs.h  gpio_fs.h  mutex_fs.h  oled_ssd1306_fs.h  pipe_fs.h  segmentdisplay_fs.h  semaphore_fs.h  shiftregister_fs.h  trng_fs.h  uart_fs.h
sources/kernel/include/memory/: kernel_heap.h  memmap.h  mmu.h  pages.h  pt_alloc.h
sources/kernel/include/process/: condvar.h  elf_loader.h  mutex.h  pipe.h  process.h  process_manager.h  resource_manager.h  semaphore.h  spinlock.h  swi.h
sources/kernel/src/: cxx.cpp  initsys.cpp  interrupt_controller.cpp  interrupts.s  main.cpp  start.s  startup.cpp  sysinit.cpp  test_processes.cpp
sources/kernel/src/drivers/: bcm_aux.cpp  gpio.cpp  i2c.cpp  oled_ssd1306.cpp  segmentdisplay.cpp  shiftregister.cpp  timer.cpp  uart.cpp
sources/kernel/src/fs/: filesystem.cpp  filesystem_drivers.cpp
sources/kernel/src/memory/: kernel_heap.cpp  mmu.cpp  pages.cpp  pt_alloc.cpp
sources/kernel/src/process/: condvar.cpp  elf_loader.cpp  mutex.cpp  pipe.cpp  process_manager.cpp  resource_manager.cpp  scheduler.cpp  semaphore.cpp  spinlock.s  switch.s
sources/stdlib/: CMakeLists.txt
sources/stdlib/include/: stdfile.h  stdmutex.h  stdstring.h
sources/stdlib/src/: stdfile.cpp  stdmutex.cpp  stdstring.cpp
sources/stdutils/include/: oled.h
sources/stdutils/src/: oled.cpp
sources/userspace/: CMakeLists.txt  build.sh  crt0.c  crt0.s  cxxabi.cpp
sources/userspace/counter_task/: main.cpp
sources/userspace/idle_process/: main.cpp
sources/userspace/init_task/: main.cpp
sources/userspace/logger_task/: main.cpp
sources/userspace/oled_task/: main.cpp
sources/userspace/sos_task/: main.cpp
sources/userspace/test_process_1/: main.cpp
sources/userspace/test_process_2/: main.cpp
sources/userspace/tilt_task/: main.cpp
